fix z-indexes (refs #CU-862k41m4a)

--- a/src/tokens/z-indexes.scss
+++ b/src/tokens/z-indexes.scss
@@ -5,9 +5,9 @@
 $z-index-sticky-tabs: 49;
 $z-index-dropdown: 100;
 $z-index-sticky: 100;
+$z-index-overlay-page: 7000;
 $z-index-modal: 8000;
 $z-index-top-line: 8000;
-$z-index-overlay-page: 9000;
 $z-index-header: 10000;
 $z-index-notification: 10001;
 $z-index-overlay: 10002;
